welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: expected class or object definition
  def marquageSol(couleur) {
  ^